# libqrc

./: README.md
libqrc/: CMakeLists.txt  package.xml
libqrc-udriver/: CMakeLists.txt  package.xml
libqrc-udriver/include/: qti_qrc_common.h  qti_qrc_udriver.h
libqrc-udriver/src/: qti_qrc_uart.c  qti_qrc_udriver.c
libqrc-udriver/test/: qti_qrc_test.c
libqrc/include/app_msg/: charger_control_msg.h  client_control_msg.h  config_msg.h  emergency_msg.h  imu_msg.h  misc_msg.h  motion_msg.h  time_sync_msg.h
libqrc/include/module/: qrc_msg_management.h
libqrc/protocol/: qrc_msg_management.c
libqrc/protocol/qrc/: qrc.c  qrc.h  qrc_threadpool.c
libqrc/protocol/qrc/tinyframe/: TF_Config.h
libqrc/protocol/tinyframe/: TinyFrame.c  TinyFrame.h
