<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>qrc_udriver</name>
  <version>1.0.0</version>
  <description>ROS2 robot user driver package</description>
  <maintainer email="quic_czhuang@quicinc.com">Canfeng Zhuang</maintainer>
  <license>BSD-3-Clause-Clear</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
